[project]
name = "q-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langgraph>=0.6.6",
    "markdown2>=2.5.4",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "uvicorn>=0.35.0",
    "weasyprint>=66.0",
]
